# drivetest

./: .gitignore  LICENSE  README.md  drive_test.sh  drivetest  flake.nix  pyproject.toml
doc/: case_ssd_swap.md
src/drivetest/: __init__.py  cli.py  config.py  devices.py  fio.py  orchestrator.py  planning.py  probe.py  proc.py  report.py  safety.py  smart.py  thermal.py  tools.py  units.py
tests/: conftest.py  test_cli.py  test_config.py  test_devices.py  test_fakerunner.py  test_fio.py  test_orchestrator.py  test_planning.py  test_probe.py  test_proc.py  test_report.py  test_safety.py  test_smart.py  test_thermal.py  test_tools.py
tests/fixtures/: fio_randread.json  fio_seqread.json  lsblk_all.json  lsblk_nvme_system.json  lsblk_usb_sda.json  smart_ata.json  smart_ata_failing.json  smart_nvme.json  smart_nvme_failing.json  wipefs_signatures.json
