[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drivetest"
version = "0.1.0"
description = "Health, integrity and performance test for a storage device (SSD/NVMe), with data-safety guards and thermal pacing for passive USB enclosures."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dimsmol", email = "dimsmol@gmail.com" }]
keywords = ["ssd", "nvme", "smart", "fio", "drive", "benchmark", "storage"]

# No third-party runtime dependencies on purpose: the tool must run from a
# minimal Linux live USB (Stage 2), where only the stdlib is guaranteed. All
# real work is delegated to external CLIs (fio, smartctl, nvme, lsblk, ...).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
drivetest = "drivetest.cli:main"

[project.urls]
Homepage = "https://github.com/dimsmol/drivetest"

[tool.hatch.build.targets.wheel]
packages = ["src/drivetest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "fio: tests that shell out to a real fio binary (skipped if fio is absent)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
# The library is checked in strict mode. Tests keep real type-error checking
# (wrong arguments, bad calls, return types) but relax the "everything must be
# annotated" family below - unit tests would otherwise need type annotations on
# every fixture parameter and lambda, which is pure ceremony. This pyright
# honors per-environment rule overrides (but not a per-environment
# typeCheckingMode), so the rules are listed explicitly.
typeCheckingMode = "strict"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownLambdaType = "none"
reportUntypedFunctionDecorator = "none"
reportMissingTypeArgument = "none"
reportPrivateUsage = "none"       # tests may exercise internal helpers
reportUnusedFunction = "none"     # autouse fixtures read as "unused"
